# intent-fabric

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: AIPromptForImplementation.md  README.md  action-contract-schema.md  approval-model.md  architecture.md  docs-setup.md  knowledge-fabric-integration.md  policy-engine.md  release-process.md  simulation-only-boundary.md
src/intent_fabric/: __init__.py  models.py  serde.py
src/intent_fabric/approvals/: __init__.py  generator.py
src/intent_fabric/contracts/: __init__.py  schema.py
src/intent_fabric/intent/: __init__.py
src/intent_fabric/mcp/: __init__.py  schema.py  tools.py
src/intent_fabric/planning/: __init__.py  interfaces.py  llm.py  rule_based.py
src/intent_fabric/policies/: __init__.py  engine.py
src/intent_fabric/simulation/: __init__.py  executor.py
tests/: test_integration_flow.py  test_llm_planner.py  test_mcp_tools.py  test_planner.py  test_policy_engine.py  test_simulation.py
tests/fixtures/: evidence_package.json  intent_request.json
