[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-fabric"
version = "0.1.0"
description = "Vendor-neutral intent planning and approval framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Intent Fabric Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
